restore snapshots created with the previous major version using the
'sstableloader' tool. You can upgrade the file format of your snapshots
using the provided 'sstableupgrade' tool.


5.1
===

New features
------------
    - New Guardrails added:
      - Whether bulk loading of SSTables is allowed.

Upgrading
---------

Deprecation
-----------


5.0
===

New features
------------
    - Added a new authorizer, CIDR authorizer, to restrict user access based on CIDR groups.
    - Pluggable crypto providers were made possible via `crypto_provider` section in cassandra.yaml. The default provider is 
      Amazon Corretto Crypto Provider and it is installed automatically upon node's start. Only x86_64 and aarch64 architectures are supported now.
      Please consult upgrade section to know more details when upgrading from older Cassandra versions.
    - Added a new secondary index implementation, Storage-Attached Indexes (SAI). Overview documentation and a basic
      tutorial can be found at src/java/org/apache/cassandra/index/sai/README.md.
    - *Experimental* support for Java 17 has been added. JVM options that differ between or are
      specific for Java 17 have been added into jvm17.options.
      IMPORTANT: Running C* on Java 17 is *experimental* and do it at your own risk.
    - Added a new "unified" compaction strategy that supports the use cases of the legacy compaction strategies, with
      low space overhead, high parallelism and flexible configuration. Implemented by the UnifiedCompactionStrategy
      class. Further details and documentation can be found in
      src/java/org/apache/cassandra/db/compaction/UnifiedCompactionStrategy.md
    - New `VectorType` (cql `vector<element_type, dimension>`) which adds new fixed-length element arrays. See CASSANDRA-18504
    - Added new vector similarity functions `similarity_cosine`, `similarity_euclidean` and `similarity_dot_product`.